update structure and focus-visible

--- a/assets/styles/components/_article-card.css
+++ b/assets/styles/components/_article-card.css
@@ -1,12 +1,12 @@
 .cmp-article-card {
   list-style: none;
   margin: 0 0 var(--space-lg);
-  padding: 0;;
+  padding: 0;
   display: grid;
-  gap: 0.5rem;
+  gap: 1rem;
 
   &--two-col {
-    @media (min-width: $md) {
+    @container (min-width: 30rem) {
       grid-template-columns: 1fr 1fr;
     }
   }
@@ -23,14 +23,13 @@
     flex-direction: column;
     width: 100%;
     box-sizing: border-box;
-    padding: var(--space-sm) var(--space-md);
+    padding: var(--space-md);
     color: var(--color-text);
     border-radius: var(--space-sm);
     background-color: hsl(208deg 5% 100% / 80%);
     box-shadow:
       0 0 0 0 hsl(320deg 80% 45% / 30%) inset,
       0 0.5rem 1rem hsl(208deg 5% 0% / 10%);
-    will-change: opacity;
 
     transition: box-shadow var(--animation-duration) var(--animation-timing),
     color var(--animation-duration) var(--animation-timing);
@@ -39,28 +38,47 @@
       background-color: hsl(0deg 0% 0% / 20%);
     }
 
-    .safe-focus &:focus,
+    &:focus-visible,
     &:focus,
     &:hover {
+      outline: none;
       box-shadow:
         0 0 0 5px hsl(320deg 80% 45%) inset,
         0 0.5rem 1rem hsl(208deg 5% 0% / 10%);
     }
   }
 
-  &__term {
-    position: relative;
-    z-index: var(--z-2);
+  &__meta {
     font-size: var(--font-xs);
-    text-transform: uppercase;
-    letter-spacing: 0.125em;
+    display: flex;
+    align-self: start;
+    gap: var(--space-sm);
+    margin-bottom: var(--space-sm);
+    padding: var(--space-1xs) var(--space-sm);
+    border-radius: var(--space-1xs);
+    background-color: hsl(0deg 0% 0% / 5%);
+
+    @media (prefers-color-scheme: dark) {
+      background-color: hsl(0deg 0% 100% / 10%);
+    }
+  }
+
+  &__term {
     font-weight: var(--weight-regular);
+  }
+
+  &__source {
+    font-weight: var(--weight-medium);
+    background: var(--gradient) fixed;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
   }
 
   &__title {
     position: relative;
     z-index: var(--z-2);
-    font-size: var(--font-sm);
+    font-size: var(--font-md);
     line-height: 1.2;
   }
 }
