--- a/assets/styles/components/_projects-list.css
+++ b/assets/styles/components/_projects-list.css
@@ -112,7 +112,7 @@
     text-shadow: 0 0.25em 0.5em hsl(0deg 100% 30% / 80%);
     list-style: none;
     margin: 0;
-    padding: 0;;
+    padding: 0;
   }
 
   &__links {
