--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,14 +1,14 @@
 {{ define "main" }}
 {{ partial "home-header.html" . }}
 
-<article class="obj-gradient-block">
+<article class="obj-gradient-block" id="writing">
   <div class="obj-gradient-block__interior">
     <div class="obj-width-limiter">
       <div class="obj-gradient-block__content">
         <header>
           <h2 class="cmp-title">Writing</h2>
         </header>
-        <div class="obj-grid">
+        <div class="obj-grid obj-grid--writing">
           <div class="obj-grid__col obj-grid__col--half">
             {{ partial "css-series-list.html" . }}
           </div>
@@ -21,7 +21,7 @@
   </div>
 </article>
 
-<article class="obj-block">
+<article class="obj-block" id="projects">
   <div class="obj-width-limiter">
     <div class="obj-block-content">
       {{ partial "projects.html" . }}
@@ -29,7 +29,7 @@
   </div>
 </article>
 
-<article class="obj-gradient-block">
+<article class="obj-gradient-block" id="videos">
   <div class="obj-gradient-block__interior">
     <div class="obj-width-limiter">
       <div class="obj-gradient-block__content">
@@ -43,7 +43,7 @@
   </div>
 </article>
 
-<article class="obj-block">
+<article class="obj-block" id="about">
   <div class="obj-width-limiter">
     <div class="obj-block-content">
       {{ partial "about.html" }}
