--- a/assets/styles/components/_button.css
+++ b/assets/styles/components/_button.css
@@ -8,7 +8,7 @@
   position: relative;
   display: inline-block;
   font-size: var(--font-md);
-  padding: var(--space-sm) var(--space-lg);
+  padding: var(--space-sm) var(--space-md);
   border-radius: var(--space-sm);
   text-shadow: 0 -1px var(--color-dark);
   color: var(--color-gray-1);
