--- a/assets/styles/object/_gradient.css
+++ b/assets/styles/object/_gradient.css
@@ -55,7 +55,7 @@
   position: relative;
   z-index: var(--z-3);
   margin: calc(var(--gradient-padding) * -1) 0;
-  padding: var(--space-md) var(--space-sm);
+  padding: var(--space-md);
   border-radius: var(--space-md);
   color: var(--color-text);
   background-color: hsl(208, 5%, 100%);
