--- a/layouts/partials/css-series-list.html
+++ b/layouts/partials/css-series-list.html
@@ -5,15 +5,19 @@
   this series was to provide practical CSS examples and demos for both veteran
   and new developers.
 </p>
-<ul class="cmp-article-card cmp-article-card--two-col">
-  {{ range first 10 $.Site.Data.css_series }}
-      <li class="cmp-article-card__item">
-        <a href="{{ .link }}" class="cmp-article-card__link">
-          <span class="cmp-article-card__term">{{ .date }}</span>
-          <span class="cmp-article-card__title">{{ .title }}</span>
-        </a>
-      </li>
-  {{ end }} 
-</ul>
+
+<div class="obj-watcher">
+  <ul class="cmp-article-card cmp-article-card--two-col">
+    {{ range first 10 $.Site.Data.css_series }}
+        <li class="cmp-article-card__item">
+          <a href="{{ .link }}" class="cmp-article-card__link">
+            {{ $date := time (.date)}}
+            <time datetime="{{time.Format "2006-01-02" $date}}" class="cmp-article-card__term">{{ time.Format "2 January 2006" $date }}</time>
+            <span class="cmp-article-card__title">{{ .title }}</span>
+          </a>
+        </li>
+    {{ end }}
+  </ul>
+</div>
 
 <a href="https://www.digitalocean.com/community/tutorial_series/how-to-style-html-with-css" class="cmp-button" aria-label="External Link - Full Series on DigitalOcean">Full Series on DigitalOcean</a>
