--- a/layouts/partials/home-header.html
+++ b/layouts/partials/home-header.html
@@ -8,7 +8,7 @@
       </div>
     </a>
     <div>
-      <h1 class="cmp-site-header__title">
+      <h1 class="cmp-site-header__title js-title">
         <a href="/" class="cmp-site-header__link" rel="home" aria-label="{{ .Site.Title }}">Philip Zastrow</a>
       </h1>
       <p class="cmp-site-header__description" aria-label="Frontend Design Engineer, Web Accessibility Specialist, Writer, Speaker, et al.">
