--- a/assets/styles/components/_video-list.css
+++ b/assets/styles/components/_video-list.css
@@ -41,7 +41,9 @@
     }
 
     &:focus,
+    &:focus-visible,
     &:hover {
+      outline: none;
       box-shadow:
         0 0 0 5px hsl(320deg 80% 45%) inset,
         0 0.5rem 1rem hsl(208deg 5% 0% / 10%);
