--- a/layouts/partials/external-articles-list.html
+++ b/layouts/partials/external-articles-list.html
@@ -1,10 +1,10 @@
 <h3>Articles</h3>
 <ul class="cmp-article-card">
-  {{ range first 6 $.Site.Data.external_articles }}
+  {{ range first 8 $.Site.Data.external_articles }}
   <li class="cmp-article-card__item">
-    <a href="{{ .link }}" class="cmp-article-card__link">
+    <a href="{{ .link }}" class="cmp-article-card__link" aria-label="Read {{ .title }} on {{ .source }}">
       {{ $date := time (.date)}}
-      <span class="cmp-article-card__meta" >
+      <span class="cmp-article-card__meta">
         <time datetime="{{time.Format "2006-01-02" $date}}" class="cmp-article-card__term">
           {{ time.Format "2 January 2006" $date }}
         </time>
