--- a/layouts/partials/home-header.html
+++ b/layouts/partials/home-header.html
@@ -1,15 +1,15 @@
 <div class="obj-width-listing">
   <div class="cmp-site-header cmp-site-header--home">
-    <a href="/" class="cmp-site-header__logo" rel="home" aria-hidden="true">
+    <div class="cmp-site-header__logo">
       <div class="cmp-logo">
         <div class="cmp-logo__top"></div>
         <div class="cmp-logo__bottom"></div>
         <div class="cmp-logo__diagonal"></div>
       </div>
-    </a>
+    </div>
     <div>
       <h1 class="cmp-site-header__title js-title">
-        <a href="/" class="cmp-site-header__link" rel="home" aria-label="{{ .Site.Title }}">Philip Zastrow</a>
+        Philip Zastrow
       </h1>
       <p class="cmp-site-header__description" aria-label="Frontend Design Engineer, Web Accessibility Specialist, Writer, Speaker, et al.">
         Frontend Design Engineer<br>
