--- a/layouts/partials/videos.html
+++ b/layouts/partials/videos.html
@@ -1,7 +1,7 @@
 <ul class="cmp-video-list">
   {{ range $.Site.Data.videos }}
     <li class="cmp-video-list__item">
-      <a href="https://www.youtube.com/watch?v={{ .ytcode }}" class="cmp-video-list__link">
+      <a href="https://www.youtube.com/watch?v={{ .ytcode }}" class="cmp-video-list__link" aria-label="Watch {{ .title }} on YouTube">
         <h3 id="video-{{ .ytcode }}" class="cmp-video-list__title">{{ .title }}</h3>
         <img
           class="cmp-video-list__image"
