--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,9 +1,9 @@
 <div class="cmp-site-header">
   <div class="obj-width-listing">
     <div class="cmp-site-header__content">
-      <a href="/" rel="home" class="cmp-back-button">
-        <svg viewBox="0 0 80 80" class="cmp-back-button__svg">
-          <path d="M1,40 80,40M20,20 1,40 20,60" class="cmp-back-button__arrow" />
+      <a href="/" rel="home" class="cmp-site-header__back-button" aria-label="Back to Homepage">
+        <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" height="80" width="80" class="cmp-site-header__back-svg">
+          <path d="M10,40 70,40M30,20 10,40 30,60" class="cmp-site-header__back-arrow" />
         </svg>
       </a>
       <a href="/" class="cmp-site-header__logo" aria-hidden="true">
