--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="{{ .Site.LanguageCode }}">
 	{{- partial "head.html" . -}}
 	<body>
 		<div>
 			<a href="#main" class="cmp-skip-link">Skip to content</a>
 		</div>
 		{{ partial "header.html" . }}
-		{{- block "main" . }}{{- end }}
+		{{- block "main" . }}{{ end -}}
 		{{ partial "footer.html" . }}
 	</body>
 </html>
