--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,14 +6,29 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	{{ with .OutputFormats.Get "rss" -}}
+
+	{{- if .Params.canonicalUrl -}}
+	<link rel="canonical" href="{{ .Params.canonicalUrl }}">
+	{{ else }}
+	<link rel="canonical" href="{{ .Permalink }}">
+	{{ end -}}
+
+	{{- if .Params.Description }}
+	<meta name="description" content="{{ .Params.Description }}">
+	{{ else -}}
+	<meta name="description" content="{{ .Site.Params.Description }}">
+	{{ end -}}
+
+	{{- template "_internal/opengraph.html" . -}}
+
+	{{- with .OutputFormats.Get "rss" -}}
 			{{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
 	{{ end -}}
-	<link rel="icon" type="image/png" href="{{$favicon.RelPermalink}}">
+	<link rel="icon" type="image/png" href="{{ $favicon.RelPermalink }}">
 	<link rel="preconnect" href="https://use.typekit.net" />
 	<link rel="stylesheet" href="https://use.typekit.net/nxn0mnh.css" />
 	<link rel="stylesheet" href="{{ $style.Permalink | relURL }}">
-	{{ $title := print .Title " | " .Site.Title }}
-	{{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
+	{{- $title := print .Title " | " .Site.Title }}
+	{{ if .IsHome }}{{ $title = .Site.Title }}{{ end -}}
 	<title>{{ $title }}</title>
 </head>
