--- a/assets/styles/components/_video-list.css
+++ b/assets/styles/components/_video-list.css
@@ -58,7 +58,7 @@
 
   &__title {
     font-size: var(--font-sm);
-    font-weight: var(--weight-regular);
+    font-variation-settings: var(--primary-var-regular);
     line-height: 1.2;
     margin: 0 0 0.5em;
     color: inherit;
