--- a/assets/styles/components/_article-list-item.css
+++ b/assets/styles/components/_article-list-item.css
@@ -10,7 +10,8 @@
   }
 
   &__title {
-    font-family: var(--extended);
+      font-family: var(--font-secondary);
+    font-variation-settings: var(--secondary-var-regular);
     font-size: var(--font-lg);
     font-weight: inherit;
   }
@@ -22,7 +23,7 @@
     text-underline-offset: 0.125em;
     text-decoration-color: var(--link-underline);
     transition: color var(--animation-duration) var(--animation-timing), text-decoration-color var(--animation-duration) var(--animation-timing);
-    font-weight: var(--weight-regular);
+    font-variation-settings: var(--primary-var-regular);
   }
 
   &__link:hover {
@@ -47,11 +48,11 @@
   }
 
   &__date {
-    font-weight: var(--weight-regular);
+    font-variation-settings: var(--primary-var-regular);
   }
 
   &__source {
-    font-weight: var(--weight-medium);
+    font-variation-settings: var(--primary-var-bold);
     background: var(--gradient) fixed;
     -webkit-background-clip: text;
     background-clip: text;
