--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -26,7 +26,7 @@
 	{{ end -}}
 	<link rel="icon" type="image/png" href="{{ $favicon.RelPermalink }}">
 	<link rel="preconnect" href="https://use.typekit.net" />
-	<link rel="stylesheet" href="https://use.typekit.net/nxn0mnh.css" />
+	<link rel="stylesheet" href="https://use.typekit.net/hcc4udn.css" />
 	<link rel="stylesheet" href="{{ $style.Permalink | relURL }}">
 	{{- $title := print .Title " | " .Site.Title }}
 	{{ if .IsHome }}{{ $title = .Site.Title }}{{ end -}}
