--- a/assets/styles/components/_article-list-item.css
+++ b/assets/styles/components/_article-list-item.css
@@ -1,61 +1,64 @@
 .cmp-article-item {
-  display: flex;
-  flex-direction: column-reverse;
-  gap: 1rem;
-  margin: 4rem 0;
+	display: flex;
+	flex-direction: column-reverse;
+	gap: 1rem;
+	margin: 4rem 0;
 
-  &__title,
-  &__meta {
-    margin: 0;
-  }
+	&__title,
+	&__meta {
+		margin: 0;
+	}
 
-  &__title {
-      font-family: var(--font-secondary);
-    font-variation-settings: var(--secondary-var-regular);
-    font-size: var(--font-lg);
-    font-weight: inherit;
-  }
+	&__title {
+			font-family: var(--font-secondary);
+		font-variation-settings: var(--secondary-var-regular);
+		font-size: var(--font-lg);
+		font-weight: inherit;
+	}
 
-  &__link {
-    color: var(--color-alt);
-    text-decoration: underline;
-    text-decoration-thickness: 0.0625em;
-    text-underline-offset: 0.125em;
-    text-decoration-color: var(--link-underline);
-    transition: color var(--animation-duration) var(--animation-timing), text-decoration-color var(--animation-duration) var(--animation-timing);
-    font-variation-settings: var(--primary-var-regular);
-  }
+	&__link {
+		color: var(--color-alt);
+		text-decoration: underline;
+		text-decoration-thickness: 0.0625em;
+		text-underline-offset: 0.125em;
+		text-decoration-color: var(--link-underline);
+		transition: color var(--animation-duration) var(--animation-timing), text-decoration-color var(--animation-duration) var(--animation-timing);
+		font-variation-settings: var(--primary-var-regular);
+	}
 
-  &__link:hover {
-    color: var(--color-text);
-    text-decoration-color: var(--color-primary);
-  }
+	&__link:hover {
+		color: var(--color-text);
+		text-decoration-color: var(--color-primary);
+	}
 
 
-  &__meta {
-    font-size: var(--font-xs);
-    display: flex;
-    align-self: start;
-    gap: var(--space-sm);
-    margin-bottom: var(--space-sm);
-    padding: var(--space-1xs) var(--space-sm);
-    border-radius: var(--space-1xs);
-    background-color: hsl(0deg 0% 0% / 5%);
+	&__meta {
+		font-size: var(--font-xs);
+		display: flex;
+		align-self: start;
+		gap: var(--space-sm);
+		margin-bottom: var(--space-sm);
+		padding: var(--space-1xs) var(--space-sm);
+		border-radius: var(--space-1xs);
+		background-color: hsl(0deg 0% 0% / 5%);
 
-    @media (prefers-color-scheme: dark) {
-      background-color: hsl(0deg 0% 100% / 10%);
-    }
-  }
+		@media (prefers-color-scheme: dark) {
+			background-color: hsl(0deg 0% 100% / 10%);
+		}
+	}
 
-  &__date {
-    font-variation-settings: var(--primary-var-regular);
-  }
+	&__date {
+		font-variation-settings: var(--primary-var-regular);
+	}
 
-  &__source {
-    font-variation-settings: var(--primary-var-bold);
-    background: var(--gradient) fixed;
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-  }
+	&__source {
+		color: var(--color-primary);
+		font-variation-settings: var(--primary-var-bold);
+		@supports not (-moz-appearance:none) {
+			background: var(--gradient) fixed;
+			-webkit-background-clip: text;
+			background-clip: text;
+			color: transparent;
+		}
+	}
 }
