--- a/assets/styles/components/_site-header.css
+++ b/assets/styles/components/_site-header.css
@@ -1,107 +1,110 @@
 .cmp-site-header {
-  --logo-size: clamp(4rem, 10vw, 6rem);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 1em;
-  background-color: var(--color-background);
-  padding: calc(var(--logo-size) * 0.75) 0 calc(var(--logo-size) * 1.75);
+	--logo-size: clamp(4rem, 10vw, 6rem);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	gap: 1em;
+	background-color: var(--color-background);
+	padding: calc(var(--logo-size) * 0.75) 0 calc(var(--logo-size) * 1.75);
 
-  &--home {
-    --logo-size: clamp(4rem, 20vw, 16rem);
-    padding: max(4vh, 1.5rem) 0;
-    gap: calc(var(--logo-size) * 0.375);
+	&--home {
+		--logo-size: clamp(4rem, 20vw, 16rem);
+		padding: max(4vh, 1.5rem) 0;
+		gap: calc(var(--logo-size) * 0.375);
 
-    @media (min-width: 28rem) {
-      flex-direction: row;
-    }
+		@media (min-width: 28rem) {
+			flex-direction: row;
+		}
 
-    @media (min-width: $md) {
-      margin: max(10vh, 4rem) 0 max(20vh, 8rem);
-    }
-  }
+		@media (min-width: $md) {
+			margin: max(10vh, 4rem) 0 max(20vh, 8rem);
+		}
+	}
 
-  &--mask {
-    mask-image:
-      linear-gradient(
-        178deg,
-        #000 50%,
-        #0008 calc(50% + 1px),
-        #0008 calc(50% + 9px),
-        #0000 calc(50% + 10px));
-  }
+	&--mask {
+		mask-image:
+			linear-gradient(
+				178deg,
+				#000 50%,
+				#0008 calc(50% + 1px),
+				#0008 calc(50% + 9px),
+				#0000 calc(50% + 10px));
+	}
 
-  &__logo {
-    will-change: auto;
-    display: block;
-    aspect-ratio: 25 / 23;
-    width: var(--logo-size);
-  }
+	&__logo {
+		will-change: auto;
+		display: block;
+		aspect-ratio: 25 / 23;
+		width: var(--logo-size);
+	}
 
-  &__title {
-      font-family: var(--font-secondary);
-    font-variation-settings: var(--secondary-var-light);
-    line-height: 1.2;
-    margin: 0;
-    font-size: clamp(2rem, 4vw, 3.375rem);
-  }
+	&__title {
+			font-family: var(--font-secondary);
+		font-variation-settings: var(--secondary-var-light);
+		line-height: 1.2;
+		margin: 0;
+		font-size: clamp(2rem, 4vw, 3.375rem);
+	}
 
-  &--home &__title {
-    font-size: clamp(1rem, 5vw, 5rem);
-  }
+	&--home &__title {
+		font-size: clamp(1rem, 5vw, 5rem);
+	}
 
-  &__description {
-    margin: 0;
-    font-size: clamp(0.75rem, 3vw, 3rem);
-    line-height: 1.2;
-      font-family: var(--font-secondary);
-    font-variation-settings: var(--secondary-var-thin);
+	&__description {
+		margin: 0;
+		font-size: clamp(0.75rem, 3vw, 3rem);
+		line-height: 1.2;
+		font-family: var(--font-secondary);
+		font-variation-settings: var(--secondary-var-thin);
+		color: var(--color-primary);
 
-    @media (any-pointer: fine) and (min-width: $md) {
-      background: var(--gradient) fixed;
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-    }
-  }
+		@media (any-pointer: fine) and (min-width: $md) {
+			@supports not (-moz-appearance:none) {
+				background: var(--gradient) fixed;
+				-webkit-background-clip: text;
+				background-clip: text;
+				color: transparent;
+			}
+		}
+	}
 
-  &__content {
-    display: flex;
-    gap: clamp(1.5rem, 2vw, 2.5rem);
-    align-items: center;
-  }
+	&__content {
+		display: flex;
+		gap: clamp(1.5rem, 2vw, 2.5rem);
+		align-items: center;
+	}
 
-  &__back-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: hsl(0deg 0% 0% / 10%);
-    aspect-ratio: 1 / 1;
-    border-radius: 50%;
+	&__back-button {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background-color: hsl(0deg 0% 0% / 10%);
+		aspect-ratio: 1 / 1;
+		border-radius: 50%;
 
-    @media (prefers-color-scheme: dark) {
-      background-color: hsl(0deg 0% 100% / 10%);
-    }
-  }
+		@media (prefers-color-scheme: dark) {
+			background-color: hsl(0deg 0% 100% / 10%);
+		}
+	}
 
-  &__back-svg {
-    max-width: 100%;
-  }
+	&__back-svg {
+		max-width: 100%;
+	}
 
-  &__back-arrow {
-    vector-effect: non-scaling-stroke;
-    stroke-width: 2px;
-    stroke: currentColor;
-    fill: none;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    transition: transform var(--animation-duration) var(--animation-timing);
-  }
+	&__back-arrow {
+		vector-effect: non-scaling-stroke;
+		stroke-width: 2px;
+		stroke: currentColor;
+		fill: none;
+		stroke-linecap: round;
+		stroke-linejoin: round;
+		transition: transform var(--animation-duration) var(--animation-timing);
+	}
 
-  &__back-button:has(+ &__logo:hover) &__back-arrow,
-  &__back-button:hover &__back-arrow {
-    transform: translateX(-0.25em);
-  }
+	&__back-button:has(+ &__logo:hover) &__back-arrow,
+	&__back-button:hover &__back-arrow {
+		transform: translateX(-0.25em);
+	}
 
 }
